Basic structure is introduced
- Add two html files for windows;
- main.js receives functionality;
- package.json - test command -> start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First project with electron usage in mind",
   "main": "main.js",
   "scripts": {
-    "test": "electron ."
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
