--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "homepage": "https://github.com/PkAIR/ShoppingList#readme",
     "devDependencies": {
         "electron-packager": "^13.1.1"
+    },
+    "dependencies": {
+        "electron": "^5.0.6",
+        "uuid": "^3.3.2"
     }
 }
